@@ -7,7 +7,8 @@
  *
  *  See the function descriptions in vbe.c for more information
  */
-
+void vbe_init();
+void vbe_display_info();
 void vbe_biosfn_return_controller_information(AX, ES, DI);
 void vbe_biosfn_return_mode_information(AX, CX, ES, DI);
 void vbe_biosfn_set_mode(AX, BX, ES, DI);
